--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
