add adaptive for mobile and table devices and change npm script for sass start

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "build": "sass --no-source-map public/css/header.scss public/css/header.css"
+    "build": "sass --no-source-map public/css/"
   },
   "repository": {
     "type": "git",
